Bump version and update dependencies